==================================================================
User visible changes for UPX
==================================================================

[ UNSTABLE BETA VERSION - please see README.1ST for some more info ]

Changes in 1.92 beta (XX XXX 2004):
  * UNSTABLE BETA VERSION - DO NOT USE EXCEPT FOR TESTING

Changes in 1.91 beta (30 Jun 2004):
  * djgpp2/coff: added support for recent binutils versions
  * linux/elf386, linux/sh386: lots of improvements
  * vmlinuz/386: added support for recent kernels
  * watcom/le: don't crash on files without relocations
  * win32/pe: stricter checks of some PE values
  * option `--brute' now implies `--crp-ms=999999'.
  * source code: much improved portability using ACC, the
    Automatic Compiler Configuration
  * source code: compile fixes for strict ISO C++ compilers
  * source code: compile fixes for Win64
  * re-synced with upx 1.25 branch

Changes in 1.90 beta (11 Nov 2002):
  * UNSTABLE BETA VERSION - DO NOT USE EXCEPT FOR TESTING
  * implemented several new options for finer compression control:
      `--all-methods', `--all-filters' and `--brute'
  * ps1/exe: new format - UPX now supports PlayStation One programs
  * linux/386: added the option `--force-execve'
  * vmlinuz/386: better kernel detection and sanity checks
  * re-synced with upx 1.24 branch
  * documentation updates

Changes in 1.11 beta (20 Dec 2000):
  * UNSTABLE BETA VERSION - DO NOT USE EXCEPT FOR TESTING
  * vmlinuz/386: new format - UPX now supports bootable linux kernels
  * linux/elf386: added the new ELF direct-to-memory executable format - no
    more temp files are needed for decompression!
  * linux/sh386: added the new shell direct-to-memory executable format - no
    more temp files are needed for decompression!
  * reduced overall memory requirements during packing
  * quite a number of internal source code rearrangements

==================================================================

Changes in 1.25 (29 Jun 2004)