@@ -128,6 +128,7 @@ struct options_t {
         int compress_icons;
         int compress_resources;
         signed char compress_rt[25];    // 25 == RT_LAST
+        int strip_loadconf;
         int strip_relocs;
     } win32_pe;
 };
